--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "ionicons": "^7.0.0",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
