--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
-    "@ionic/vue": "^8.0.0",
-    "@ionic/vue-router": "^8.0.0",
+    "@ionic/vue": "^5.9.4",
+    "@ionic/vue-router": "^5.9.4",
     "apexcharts": "^4.7.0",
     "chart.js": "^4.4.9",
+    "chartjs-plugin-annotation": "^3.1.0",
     "echarts": "^5.6.0",
     "ionicons": "^7.0.0",
     "tsparticles-engine": "^2.12.0",
